vm-provision/shared_folder/calico-tigera/network-policy/1.pod-deafult-deny/network-policy-default-deny.yaml
kind: GlobalNetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: default-deny-intra-pod
spec:
  namespaceSelector: has(projectcalico.org/name) && projectcalico.org/name not in {"kube-system", "calico-system"}
  types:
  - Ingress
  - Egress
  egress:
  # allow all namespaces to communicate to DNS pods
  - action: Allow
    protocol: UDP
    destination:
      selector: k8s-app == 'kube-dns'
      ports:
      - 53
